# projeto_airflow

./: exemplo_00.py  exemplo_01.py  mkdocs.yml  pyproject.toml  requirements.txt
dags/: api_postgres.py  quarta_dag.py  quinta_dag.py  terceira_Dag.py
docs/: index.md
frontend/: exemplo_02.py
include/: controller.py  db.py
